libcdi/src/mo_cdi.f90

          integer(kind=c_int), value :: vlistID
          integer(kind=c_int), value :: varID
          integer(kind=c_int), value :: tsteptype
        end subroutine vlistDefVarTsteptype
      end interface
      interface
        function vlistInqVarTsteptype(vlistID,varID) bind(c,name='vlistInqVarTsteptype')
          import :: c_int
          integer(kind=c_int), value :: vlistID
          integer(kind=c_int), value :: varID
          integer(kind=c_int) :: vlistInqVarTsteptype
        end function vlistInqVarTsteptype
      end interface
      interface
        subroutine vlistDefVarCompType(vlistID,varID,comptype) bind(c,name='vlistDefVarCompType')
          import :: c_int
          integer(kind=c_int), value :: vlistID
          integer(kind=c_int), value :: varID
          integer(kind=c_int), value :: comptype
        end subroutine vlistDefVarCompType
      end interface
      interface
        function vlistInqVarCompType(vlistID,varID) bind(c,name='vlistInqVarCompType')
          import :: c_int
          integer(kind=c_int), value :: vlistID
          integer(kind=c_int), value :: varID
          integer(kind=c_int) :: vlistInqVarCompType
        end function vlistInqVarCompType
      end interface
      interface
        subroutine vlistDefVarCompLevel(vlistID,varID,complevel) bind(c,name='vlistDefVarCompLevel')
          import :: c_int
          integer(kind=c_int), value :: vlistID
          integer(kind=c_int), value :: varID
          integer(kind=c_int), value :: complevel
        end subroutine vlistDefVarCompLevel
      end interface
      interface
        function vlistInqVarCompLevel(vlistID,varID) bind(c,name='vlistInqVarCompLevel')
          import :: c_int
          integer(kind=c_int), value :: vlistID
          integer(kind=c_int), value :: varID
          integer(kind=c_int) :: vlistInqVarCompLevel
        end function vlistInqVarCompLevel
      end interface
      interface
        subroutine vlistDefVarParam(vlistID,varID,param) bind(c,name='vlistDefVarParam')
          import :: c_int
          integer(kind=c_int), value :: vlistID
          integer(kind=c_int), value :: varID
          integer(kind=c_int), value :: param
        end subroutine vlistDefVarParam
      end interface
      interface
        function vlistInqVarParam(vlistID,varID) bind(c,name='vlistInqVarParam')
          import :: c_int
          integer(kind=c_int), value :: vlistID
          integer(kind=c_int), value :: varID
          integer(kind=c_int) :: vlistInqVarParam
        end function vlistInqVarParam
      end interface
      interface
        subroutine vlistDefVarCode(vlistID,varID,code) bind(c,name='vlistDefVarCode')
          import :: c_int
          integer(kind=c_int), value :: vlistID
          integer(kind=c_int), value :: varID
          integer(kind=c_int), value :: code
        end subroutine vlistDefVarCode
      end interface
      interface
        function vlistInqVarCode(vlistID,varID) bind(c,name='vlistInqVarCode')
          import :: c_int
          integer(kind=c_int), value :: vlistID
          integer(kind=c_int), value :: varID
          integer(kind=c_int) :: vlistInqVarCode
        end function vlistInqVarCode
      end interface
      interface
        subroutine vlistDefVarDatatype(vlistID,varID,datatype) bind(c,name='vlistDefVarDatatype')
          import :: c_int
          integer(kind=c_int), value :: vlistID
          integer(kind=c_int), value :: varID
          integer(kind=c_int), value :: datatype
        end subroutine vlistDefVarDatatype
      end interface
      interface
        function vlistInqVarDatatype(vlistID,varID) bind(c,name='vlistInqVarDatatype')
          import :: c_int
          integer(kind=c_int), value :: vlistID
          integer(kind=c_int), value :: varID
          integer(kind=c_int) :: vlistInqVarDatatype
        end function vlistInqVarDatatype
      end interface
      interface
        subroutine vlistDefVarChunkType(vlistID,varID,chunktype) bind(c,name='vlistDefVarChunkType')
          import :: c_int
          integer(kind=c_int), value :: vlistID
          integer(kind=c_int), value :: varID
          integer(kind=c_int), value :: chunktype
        end subroutine vlistDefVarChunkType
      end interface
      interface
        function vlistInqVarChunkType(vlistID,varID) bind(c,name='vlistInqVarChunkType')
          import :: c_int
          integer(kind=c_int), value :: vlistID
          integer(kind=c_int), value :: varID
          integer(kind=c_int) :: vlistInqVarChunkType
        end function vlistInqVarChunkType
      end interface
      interface
        subroutine vlistDefVarXYZ(vlistID,varID,xyz) bind(c,name='vlistDefVarXYZ')
          import :: c_int
          integer(kind=c_int), value :: vlistID
          integer(kind=c_int), value :: varID
          integer(kind=c_int), value :: xyz
        end subroutine vlistDefVarXYZ
      end interface
      interface
        function vlistInqVarXYZ(vlistID,varID) bind(c,name='vlistInqVarXYZ')
          import :: c_int
          integer(kind=c_int), value :: vlistID
          integer(kind=c_int), value :: varID
          integer(kind=c_int) :: vlistInqVarXYZ
        end function vlistInqVarXYZ
      end interface
      interface
        function vlistInqVarNumber(vlistID,varID) bind(c,name='vlistInqVarNumber')
          import :: c_int
          integer(kind=c_int), value :: vlistID
          integer(kind=c_int), value :: varID
          integer(kind=c_int) :: vlistInqVarNumber
        end function vlistInqVarNumber
      end interface
      interface
        subroutine vlistDefVarInstitut(vlistID,varID,instID) bind(c,name='vlistDefVarInstitut')
          import :: c_int
          integer(kind=c_int), value :: vlistID
          integer(kind=c_int), value :: varID
          integer(kind=c_int), value :: instID
        end subroutine vlistDefVarInstitut
      end interface
      interface
        function vlistInqVarInstitut(vlistID,varID) bind(c,name='vlistInqVarInstitut')
          import :: c_int
          integer(kind=c_int), value :: vlistID
          integer(kind=c_int), value :: varID
          integer(kind=c_int) :: vlistInqVarInstitut
        end function vlistInqVarInstitut
      end interface
      interface
        subroutine vlistDefVarModel(vlistID,varID,modelID) bind(c,name='vlistDefVarModel')
          import :: c_int
          integer(kind=c_int), value :: vlistID
          integer(kind=c_int), value :: varID
          integer(kind=c_int), value :: modelID
        end subroutine vlistDefVarModel
      end interface
      interface
        function vlistInqVarModel(vlistID,varID) bind(c,name='vlistInqVarModel')
          import :: c_int
          integer(kind=c_int), value :: vlistID
          integer(kind=c_int), value :: varID
          integer(kind=c_int) :: vlistInqVarModel
        end function vlistInqVarModel
      end interface
      interface
        subroutine vlistDefVarTable(vlistID,varID,tableID) bind(c,name='vlistDefVarTable')
          import :: c_int
          integer(kind=c_int), value :: vlistID
          integer(kind=c_int), value :: varID
          integer(kind=c_int), value :: tableID
        end subroutine vlistDefVarTable
      end interface
      interface
        function vlistInqVarTable(vlistID,varID) bind(c,name='vlistInqVarTable')
          import :: c_int
          integer(kind=c_int), value :: vlistID
          integer(kind=c_int), value :: varID
          integer(kind=c_int) :: vlistInqVarTable
        end function vlistInqVarTable
      end interface
      interface
        subroutine vlistDefVarName(vlistID,varID,name) bind(c,name='vlistDefVarName')
          import :: c_int,c_char
          integer(kind=c_int), value :: vlistID
          integer(kind=c_int), value :: varID
          character(kind=c_char), dimension(*) :: name
        end subroutine vlistDefVarName
      end interface
      interface
        subroutine vlistInqVarName(vlistID,varID,name) bind(c,name='vlistInqVarName')
          import :: c_int,c_char
          integer(kind=c_int), value :: vlistID
          integer(kind=c_int), value :: varID
          character(kind=c_char), dimension(*) :: name
        end subroutine vlistInqVarName
      end interface
      interface
        subroutine vlistDefVarStdname(vlistID,varID,stdname) bind(c,name='vlistDefVarStdname')
          import :: c_int,c_char
          integer(kind=c_int), value :: vlistID
          integer(kind=c_int), value :: varID
          character(kind=c_char), dimension(*) :: stdname
        end subroutine vlistDefVarStdname
      end interface
      interface
        subroutine vlistInqVarStdname(vlistID,varID,stdname) bind(c,name='vlistInqVarStdname')
          import :: c_int,c_char
          integer(kind=c_int), value :: vlistID
          integer(kind=c_int), value :: varID
          character(kind=c_char), dimension(*) :: stdname
        end subroutine vlistInqVarStdname
      end interface
      interface
        subroutine vlistDefVarLongname(vlistID,varID,longname) bind(c,name='vlistDefVarLongname')
          import :: c_int,c_char
          integer(kind=c_int), value :: vlistID
          integer(kind=c_int), value :: varID
          character(kind=c_char), dimension(*) :: longname
        end subroutine vlistDefVarLongname
      end interface
      interface
        subroutine vlistInqVarLongname(vlistID,varID,longname) bind(c,name='vlistInqVarLongname')
          import :: c_int,c_char
          integer(kind=c_int), value :: vlistID
          integer(kind=c_int), value :: varID
          character(kind=c_char), dimension(*) :: longname
        end subroutine vlistInqVarLongname
      end interface
      interface
        subroutine vlistDefVarUnits(vlistID,varID,units) bind(c,name='vlistDefVarUnits')
          import :: c_int,c_char
          integer(kind=c_int), value :: vlistID
          integer(kind=c_int), value :: varID
          character(kind=c_char), dimension(*) :: units
        end subroutine vlistDefVarUnits
      end interface
      interface
        subroutine vlistInqVarUnits(vlistID,varID,units) bind(c,name='vlistInqVarUnits')
          import :: c_int,c_char
          integer(kind=c_int), value :: vlistID
          integer(kind=c_int), value :: varID
          character(kind=c_char), dimension(*) :: units
        end subroutine vlistInqVarUnits
      end interface
      interface
        subroutine vlistDefVarMissval(vlistID,varID,missval) bind(c,name='vlistDefVarMissval')
          import :: c_int,c_double
          integer(kind=c_int), value :: vlistID
          integer(kind=c_int), value :: varID
          real(kind=c_double), value :: missval
        end subroutine vlistDefVarMissval
      end interface
      interface
        function vlistInqVarMissval(vlistID,varID) bind(c,name='vlistInqVarMissval')
          import :: c_int,c_double
          integer(kind=c_int), value :: vlistID
          integer(kind=c_int), value :: varID
          real(kind=c_double) :: vlistInqVarMissval
        end function vlistInqVarMissval
      end interface
      interface
        subroutine vlistDefVarExtra(vlistID,varID,extra) bind(c,name='vlistDefVarExtra')
          import :: c_int,c_char
          integer(kind=c_int), value :: vlistID
          integer(kind=c_int), value :: varID
          character(kind=c_char), dimension(*) :: extra
        end subroutine vlistDefVarExtra
      end interface
      interface
        subroutine vlistInqVarExtra(vlistID,varID,extra) bind(c,name='vlistInqVarExtra')
          import :: c_int,c_char
          integer(kind=c_int), value :: vlistID
          integer(kind=c_int), value :: varID
          character(kind=c_char), dimension(*) :: extra
        end subroutine vlistInqVarExtra
      end interface
      interface
        subroutine vlistDefVarScalefactor(vlistID,varID,scalefactor) bind(c,name='vlistDefVarScalefactor')
          import :: c_int,c_double
          integer(kind=c_int), value :: vlistID
